2001-02-25 06:00 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   *utils/hbmake/hbmake.prg
      *Fixed an small bug regarding the number of select files on editor mode
   *utils/hbdoc/genpdf1.prg
    utils/hbdoc/rtf.prg
      *Small enhacements
2001-02-24 19:45 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     + Added CompileNestedBlocks() #ifdef __CLIPPER__, because Clipper's Macro Compiler can *not* compile nested blocks.

     /* Clipper macro compiler can't compile literal blocks which contain nested blocks. This is needed by #commands like:
        INDEX ON ... TO ...
        Now PP will pre-compile such nested blocks. This makes PP fully functional when compiled with Clipper too :-) */

   * harbour/source/rdd/dbfcdx1.c
     ! Moved few declarations above the HB_TRACE() lien, to fix compilation errors.

2001-02-24 18:10 UTC+0300 Alex Shashkov <shashkov@ostu.ru>
   * harbour/source/rtl/console.c
     ! Fixed bug STDOUT(..,"",..) on Watcom C 11.0

   * harbour/source/pp/ppcore.c
   * harbour/source/pp/pragma.c
     ! Fixed extern declaration for Watcom C 11.0

2001-02-24 12:45 UTC+0300 Alex Shashkov <shashkov@ostu.ru>
   * harbour/source/vm/dynsym.c
     ! Fixed
   * harbour/include/hbrddcdx.h
     + Added support ORDSETFOCUS() and update keys
   * harbour/source/rdd/dbfcdx1.c
     + Added support ORDSETFOCUS(), update keys, keys any type
     - remove hb_cdxltoa()
   * harbour/source/rdd/dbfcdx1.h
     ! Fixed support for Watcom C 11.0
     + Added support keys any type
   * harbour/source/rdd/dbfcdx2.h
     + Added some new functions
     * Changed the declaration of some functions

   Not finished yet.

2001-02-23 17:20 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/vm/hvm.c
     ! Added logic to clear items of extraneous parameters in hb_vmFrame().

2001-02-23 21:40 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * bug fixed, reported by Maurilio Longo
